Chapter5_OpenShift_Networking_for_Application/create_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-frontend  # 1
  labels:
    app: frontend-svc   # 2
spec:
  ports:            # 3
  - name: HTTP
    protocol: TCP 
    port: 443          # 4
    targetPort: 8443  # 5
  selector:
    app: shopping-cart
    name: frontend
  type: ClusterIP


---
# 1 this is The name of the service. This identifier allows you to manage the service after its creation.
# 2  A label that you can use as a selector. This allow you to logically group your services.
# 3 An array of objects that describes network ports to expose.

# 4  This is the port that the service exposes. You use this port to connect to the application that
#    the service exposes.

# 5 This is the port on which the application listens. The service creates a forwarding rule from
#   the service port to the service target port.

# 6 The selector defines which pods are in the service pool. Services use this selector to
#   determine where to route the traffic.

# 7 This is how the service is exposed. ClusterIP exposes the service using an IP address
#   internal to the cluster and is the default value
