Chapter5_OpenShift_Networking_for_Application/allow-from-pods-within-project.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
spec:
  podSelector: {}
  ingress: 
  - from:
      - podSelector: {}

---
# Only accept connections from pods within a project: 

# This policy  make pods accept connections from other pods in the same project, 
#   but reject all other connections from pods in other projects
#
