Chapter5_OpenShift_Networking_for_Application/allow_ingress_from_Openshift-Monitoring_and_Controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-monitoring
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
  

---
# The following policy allow ingress from Openshift monitoring and Ingress Controller

## If the default Ingress Controller uses the HostNetwork endpoint publishing strategy, then the default namespace requires the network.openshift.io/
#  policy-group=ingress label.
