Chapter5_OpenShift_Networking_for_Application/allow_only_from_ingress-Controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector: 
            matchLabels:
              network.openshift.io/policy-group: ingress
  policyTypes:
  - Ingress


---
#  THis policy make a project allowing only connections from the OpenShift Container Platform Ingress Controller
#
