Chapter5_OpenShift_Networking_for_Application/deny_all_traffic.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
spec:
  podSelector: {}
  ingress: []

---
#  To make a project deny by default, add a NetworkPolicy object that matches all pods but accepts no traffic 
#
#
